# microsoft-graphrag-example

./: .gitignore  README.md  cspell.json  main.py  pyproject.toml
docs/: evaluation.md  ollama-setup.md  setup.md  vector-rag-setup.md
docs/superpowers/specs/: 2026-07-09-vector-rag-comparison-design.md
docs/tasks/done/: task.md
evaluation/: __main__.py  cli.py  config_check.py  generate_qa.py  graphrag_client.py  judge.py  report.py  run.py  vector_rag_client.py
graphrag/: .env.example  settings.yaml
tests/evaluation/: test_cli.py  test_config_check.py  test_generate_qa.py  test_graphrag_client.py  test_judge.py  test_report.py  test_run.py  test_vector_rag_client.py
tests/vector_rag/: test_answer.py  test_chunking.py  test_cli.py  test_completion.py  test_config.py  test_config_defaults.py  test_embedding.py  test_indexer.py  test_store.py
vector_rag/: __main__.py  answer.py  chunking.py  cli.py  completion.py  config.py  embedding.py  indexer.py  settings.yaml  store.py
vector_rag/prompts/: query_system_prompt.txt
